# light-lift

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  http_server.c  leds.c  leds.h  light.c  light.h  magic.h  main.c  messaging.c  messaging.h  motors.c  motors.h  mqtt.c  mqtt.h  remote.c  remote.h  tilt_sensor.c  tilt_sensor.h  wifi.c  wifi.h
main/files/: config_payload.json  index.html
